[package]
name = "covenant-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
dotenv = "0.15.0"
itertools = "0.12.1"
log = "0.4.21"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.2", features = ["json"] }
rust_decimal = { version = "1.35.0", features = ["maths"] }
rust_decimal_macros = "1.34.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.14"

# Covenant contracts
single-party-pol-covenant = { package = "valence-covenant-single-party-pol", path = "../covenants/contracts/single-party-pol-covenant", features = ["library"] }
swap-covenant = { package = "valence-covenant-swap", path = "../covenants/contracts/swap-covenant", features = ["library"] }
two-party-pol-covenant = { package = "valence-covenant-two-party-pol", path = "../covenants/contracts/two-party-pol-covenant", features = ["library"] }

[profile.release]
lto = true
panic = 'abort'
